--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,4 +14,6 @@ python-jose[cryptography]==3.3.0
 pytesseract==0.3.10
 Pillow==12.0.0
 pdf2image==1.17.0
+qdrant-client==1.7.0
+sentence-transformers==2.2.2
 
